# morado

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG_TIMEUTIL.md  README.md  jj-fmt.ps1  jjc.bat  jjc.ps1  main.py  pyproject.toml
.kiro/specs/logger-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/utility-classes/: design.md  requirements.md  tasks.md
backend/: DATABASE_MIGRATION_SUMMARY.md  README_DATABASE_SETUP.md  alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  9791d0c3a1d4_initial_migration_create_four_layer_.py
backend/config/: development.toml  logging.toml  production.toml  testing.toml
backend/docs/: HTTP_CLIENT_README.md  api_component_models.md  dashboard_api_implementation.md  dashboard_api_quick_reference.md  dashboard_implementation_summary.md  execution_engine_http_integration.md  execution_engine_summary.md  file_operations_implementation.md  file_operations_quick_reference.md  http_client_api_reference.md  http_client_configuration_guide.md  http_client_examples.py  http_client_interceptor_guide.md  http_client_troubleshooting.md  http_client_usage_guide.md  layer2_script_models.md  layer3_component_models.md  layer4_test_case_implementation.md  logging_interceptor_implementation.md  tracing_interceptor_implementation.md
backend/scripts/: README.md  __init__.py  demo_execution_context.py  demo_execution_engine_tracing.py  demo_parameter_override.py  demo_request_tracing.py  demo_test_case_layer4.py  init_db.py  seed_data.py  test_api_component_integration.py  test_schema_validation.py  verify_app.py  verify_component_models.py  verify_execution_engine_integration.py  verify_file_operations.py  verify_http_factory.py  verify_logging_interceptor.py  verify_middleware.py  verify_retry.py  verify_schemas.py  verify_script_models.py  verify_test_case_layer4.py
backend/scripts/database/: DATABASE_CONFIG_SUMMARY.md  QUICK_SETUP.md  README.md  create_tables.py  example_usage.ps1  example_usage.sh  seed_four_layer_data.py
backend/scripts/demo/: README.md  demo_execution_context.py  demo_logging_integration.py  demo_script_models.py  demo_test_case_layer4.py  demo_tracing_integration.py
backend/scripts/test/: README.md  test_component_relationships.py  test_execution_context.py  test_file_operations_comprehensive.py  test_http_client_integration.py  test_logging.py  test_relationships.py
backend/scripts/verify/: README.md  verify_api_component_models.py  verify_backend_startup.py  verify_dashboard_endpoints.py  verify_four_layer_architecture.py  verify_four_layer_integrity.py  verify_http_client.py  verify_http_client_complete.py  verify_imports.py  verify_integration.py  verify_interceptor.py  verify_tracing_interceptor.py  verify_utils.py
backend/src/morado/: app.py
deployment/: docker-compose.dev.yml  docker-compose.yml
deployment/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
deployment/k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml
docs/: API_VERSIONING_GUIDE.md  CODE_QUALITY.md  CONFIGURATION_REFERENCE.md  EDITORCONFIG_SETUP.md  FULL_CHAIN_TRACING_SUMMARY.md  LOGGING_GUIDE.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_REFERENCE.md  MIGRATION_GUIDE.md  QUICK_START_TIMEUTIL.md  REQUEST_TRACING_GUIDE.md  SETUP_DEVELOPMENT.md  TIMEUTIL_ENHANCEMENTS.md  TRACING_QUICK_START.md  UPDATES_DATA_MANAGEMENT.md  USAGE_EXAMPLES.md  architecture.md  data-management-and-execution.md  data-management-summary.md  deployment.md  development.md  four-layer-architecture.md  four-layer-guide.md  logging.toml  parameter-override-logic.md  system-overview.md  time_convenience_examples.md  uuid-logger-dataflow.md
docs/api/: README.md  openapi.yaml
examples/: time_convenience_demo.py
frontend/: .env.development  .env.production  ACCESSIBILITY_IMPLEMENTATION.md  AUTHENTICATION.md  DASHBOARD_SETUP.md  DESIGN_SYSTEM_IMPLEMENTATION.md  I18N_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  QUICK_START_DASHBOARD.md  RESPONSIVE_DESIGN_SUMMARY.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/docs/: CLEAR_AUTH.md  ERROR_HANDLING_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  PROGRESS_SUMMARY.md  TAILWIND_CONFIG.md  TASK_1_SUMMARY.md  TASK_2_VERIFICATION.md
frontend/src/: App.vue  main.ts  test-i18n.ts
frontend/src/api/: README.md  api-definition.ts  body.ts  component.ts  header.ts  index.ts  report.ts  script.ts  test-case.ts  test-suite.ts
frontend/src/components/: HelloWorld.vue  PROP_VALIDATION_SUMMARY.md
frontend/src/composables/: useLocale.ts  useNotification.test.ts  useNotification.ts  usePerformanceMonitor.ts  useWidgetStyles.ts  useWindowResize.ts
frontend/src/i18n/: index.ts
frontend/src/layouts/: DefaultLayout.vue  EmptyLayout.vue  README.md
frontend/src/plugins/: echarts-lazy.ts  echarts.ts
frontend/src/router/: README.md  index.ts
frontend/src/stores/: README.md  apiDefinition.ts  body.ts  component.ts  dashboard.ts  header.ts  index.ts  script.ts  testCase.ts  user.ts
frontend/src/styles/: QUICK_REFERENCE.md  README.md  design-system.test.ts  design-system.ts  index.ts  main.css  widgets.css
frontend/src/test/: setup.ts
frontend/src/types/: dashboard.d.ts  index.ts  views.d.ts
frontend/src/utils/: README.md  caseConverter.ts  logger.example.ts  logger.test.ts  logger.ts  performance.test.ts  performance.ts  propValidation.test.ts  propValidation.ts
frontend/src/views/: Home.ACCESSIBILITY_SUMMARY.md  Home.ACCESSIBILITY_TEST_GUIDE.md  Home.IMPLEMENTATION_SUMMARY.md  Home.test.ts  Home.vue  I18nTest.vue  NotFound.vue  TailwindTest.vue
scripts/: build.sh  dev.sh  setup.sh
tests/: test_config_basic.py  test_context_basic.py  test_decorators_basic.py  test_filesystem_manipulation.py  test_time_basic.py  test_uuid_basic.py
tests/backend/: __init__.py  conftest.py
tests/backend/integration/: conftest.py  test_four_layer_integrity.py
tests/backend/unit/: test_config_property.py
(+196 files in other folders)
