[project]
name = "morado"
version = "0.1.0"
description = "Morado - Automation Testing Platform with Four-Layer Architecture"
authors = [{ name = "mcgeq" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["testing", "automation", "api-testing", "test-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Web Framework
    "litestar>=2.19.0",
    "uvicorn>=0.38.0",
    # Database
    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    # Data Validation
    "pydantic>=2.12.5",
    "msgspec>=0.20.0",
    # HTTP Client
    "httpx>=0.28.1",
    "requests>=2.32.5",
    # JSON Processing
    "orjson>=3.11.5",
    "jsonpath-ng>=1.7.0",
    # Caching
    "redis>=7.1.0",
    # Logging
    "structlog>=25.5.0",
    # Configuration
    "python-dotenv>=1.2.1",
    # Task Queue
    "taskiq>=0.12.1",
    # Retry Logic
    "tenacity>=9.1.2",
    # TOML Configuration
    "tomli>=2.2.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist>=3.8.0",
    "allure-pytest>=2.15.2",
    "schemathesis>=4.7.6",
    "hypothesis>=6.131.0",
]

e2e = ["playwright>=1.57.0", "selenium>=4.39.0"]

dev = [
    "ruff>=0.14.9",
    "ty>=0.0.5",
]

# ============================================================================
# Project Paths Configuration
# ============================================================================
# Backend source code is located in backend/src/morado
# Tests are located in tests/backend and tests/frontend

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["morado*"]

# ============================================================================
# ty - Fast Python Type Checker
# ============================================================================
# Documentation: https://docs.astral.sh/ty/configuration/
[tool.ty]

[tool.ty.environment]
# Python version for type checking
python-version = "3.13"
# Extra paths for module resolution
extra-paths = ["backend/src"]

[tool.ty.rules]
# Diagnostic rules configuration
# See: https://docs.astral.sh/ty/rules/

# ============================================================================
# ruff - Python Linter and Formatter
# ============================================================================
# Documentation: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py313"
output-format = "full"
# Include backend source and tests
src = ["backend/src", "tests"]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".ruff_cache",
    ".hypothesis",
    "htmlcov",
    "frontend",
]

[tool.ruff.lint]
select = [
    # https://beta.ruff.rs/docs/rules
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # McCabe cyclomatic complexity
    "DJ",    # flake8-django
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "F",     # Pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "INT",   # flake8-gettext
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "NPY",   # NumPy-specific rules
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # Pylint (ruff implementation of Pylint rules)
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T10",   # flake8-debugger
    "TD",    # flake8-todos
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "YTT",   # flake8-2020
]

ignore = [
    "B904",    # Within an except clause, raise exceptions with raise ... from err
    "B905",    # zip() without an explicit strict parameter
    "EM101",   # Exception must not use a string literal, assign to a variable first
    "EXE001",  # Shebang is present but file is not executable
    "G004",    # Logging statement uses f-string
    "ISC001",  # Conflicts with ruff format
    "PLC0415", # import-outside-top-level
    "PLC1901", # can be simplified to as an empty string is falsey
    "PLW060",  # Using global for but no assignment is done
    "PLW1641", # eq-without-hash
    "PLW2901", # Redefined loop variable
    "PT011",   # pytest.raises(Exception) is too broad
    "PT018",   # Assertion should be broken down into multiple parts
    "PT028",   # pytest-parameter-with-default-argument
    "S101",    # Use of assert detected
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SIM905",  # Consider using a list literal instead of str.split
    "RUF001",  # Ambiguous unicode character in string (允许中文)
    "RUF002",  # Ambiguous unicode character in docstring (允许中文)
    "RUF003",  # Ambiguous unicode character in comment (允许中文)
    "E501",    # Line too long (由 formatter 处理)
    "BLE001",  # Blind except (在某些情况下是合理的)
    "DTZ005",  # datetime.now() without timezone (在某些情况下是合理的)
    "DTZ003",  # datetime.utcnow() (在某些情况下是合理的)
    "DTZ006",  # datetime.fromtimestamp() without timezone
    "DTZ007",  # datetime.strptime() without timezone
    "A004",    # Import shadowing builtin (在某些情况下是合理的)
    "S108",    # Hardcoded temp file (在测试中是合理的)
    "ARG001",  # Unused function argument (在某些情况下是合理的)
    "C901",    # Complex structure (在某些情况下是合理的)
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "A001",    # Variable shadowing builtin (在某些情况下是有意的)
    "S104",    # Binding to all interfaces (在开发中是合理的)
    "S105",    # Hardcoded password (在开发配置中是合理的)
    "E402",    # Module import not at top (在某些测试中是必要的)
    "RUF012",  # Mutable class default (在某些情况下是合理的)
    "SIM102",  # Collapsible if (在某些情况下更清晰)
    "SIM105",  # Suppressible exception (在某些情况下更清晰)
    "SLF001",  # Private member accessed
    "UP037",   # Remove quotes from type annotation
]

[tool.ruff.lint.mccabe]
max-complexity = 17

[tool.ruff.lint.pylint]
allow-magic-value-types = ["float", "int", "str"]
max-args = 10
max-branches = 20
max-returns = 8
max-statements = 88

# ============================================================================
# pytest - Testing Framework Configuration
# ============================================================================
# Documentation: https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
testpaths = ["tests/backend"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--ignore=frontend",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks tests as property-based tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["backend/src/morado"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
